# pmo-agent

./: .env.example  docker-compose.yml  pyproject.toml  pytest.ini
.clinerules/: agent.md  architecture.md  intelligent-module.md  knowledge-module.md  project-structure.md  tech-stack.md
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/worker/: __init__.py  main.py
docker/: Dockerfile.api  Dockerfile.worker
src/modules/knowledge/: __init__.py
src/modules/knowledge/application/: __init__.py
src/modules/knowledge/application/dto/: __init__.py
src/modules/knowledge/application/usecases/: __init__.py  ingestion_usecase.py  retrieval_usecase.py
src/modules/knowledge/domain/: __init__.py  repository_interfaces.py  service_interfaces.py
src/modules/knowledge/domain/entities/: __init__.py  base.py  chunk.py  data_source.py  document.py  graph_entity.py  relationship.py  vector.py
src/modules/knowledge/domain/services/: __init__.py  chunking_service.py
src/modules/knowledge/infrastructure/: __init__.py
src/modules/knowledge/infrastructure/config/: lightrag_config.py
src/modules/knowledge/infrastructure/persistence/: __init__.py  chunk_repository.py  lightrag_repository.py  postgres_repository.py
src/modules/knowledge/interfaces/: __init__.py
src/modules/knowledge/interfaces/api/: __init__.py  routes.py
src/modules/knowledge/unit_test/: __init__.py  conftest.py  test_chunking_service.py  test_config.py  test_dto.py  test_entities.py  test_usecases.py
src/shared/utils/: uuid_utils.py
(+1 files in other folders)
