[project]
name = "pmo-agent"
version = "0.1.0"
description = "PMO Multi-Agent System with Agno"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agno>=0.10.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    # Knowledge Module
    "lightrag-hku>=0.1.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.18",
    "tiktoken>=0.8.0",
    "numpy>=1.26.0",
    "tenacity>=9.0.0",
    "aiohttp>=3.11.0",
    # Optional: FalkorDB support
    # "redis>=5.0.0",
    # "falkordb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
